--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0;url=https://raw.githubusercontent.com/<your-username>/resume/main/your-resume-filename.pdf">
+<!--     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Shrey's Resume</title>
 </head>
 <body>
