--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Shrey's Resume</title>
 </head>
 <body>
-    <embed src="resume.pdf" width="100%"/>
+    <embed src="resume.pdf" width="100%" height="100%"/>
 </body>
 </html>
